; ModuleID = '/home/carl/AnghaBench/git/extr_sequencer.c_write_strategy_opts.c'
source_filename = "/home/carl/AnghaBench/git/extr_sequencer.c_write_strategy_opts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.replay_opts = type { i32, i32* }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [6 x i8] c" --%s\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.replay_opts*)* @write_strategy_opts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_strategy_opts(%struct.replay_opts* %0) #0 {
  %2 = alloca %struct.replay_opts*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.strbuf, align 4
  store %struct.replay_opts* %0, %struct.replay_opts** %2, align 8
  %5 = bitcast %struct.strbuf* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %5, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  store i32 0, i32* %3, align 4
  br label %6

6:                                                ; preds = %21, %1
  %7 = load i32, i32* %3, align 4
  %8 = load %struct.replay_opts*, %struct.replay_opts** %2, align 8
  %9 = getelementptr inbounds %struct.replay_opts, %struct.replay_opts* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp slt i32 %7, %10
  br i1 %11, label %12, label %24

12:                                               ; preds = %6
  %13 = load %struct.replay_opts*, %struct.replay_opts** %2, align 8
  %14 = getelementptr inbounds %struct.replay_opts, %struct.replay_opts* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @strbuf_addf(%struct.strbuf* %4, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %19)
  br label %21

21:                                               ; preds = %12
  %22 = load i32, i32* %3, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %3, align 4
  br label %6

24:                                               ; preds = %6
  %25 = call i32 (...) @rebase_path_strategy_opts()
  %26 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %4, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @write_file(i32 %25, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 %27)
  %29 = call i32 @strbuf_release(%struct.strbuf* %4)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i32) #2

declare dso_local i32 @write_file(i32, i8*, i32) #2

declare dso_local i32 @rebase_path_strategy_opts(...) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
